export const snapshot = {};

snapshot[`Option 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "Some",
              type: "string",
            },
            value: {
              type: "string",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "None",
              type: "string",
            },
            value: {
              type: "null",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
      ],
      description: "An option of specified \`some\` type.",
      discriminator: "type",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`Option 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "Some",
              type: "string",
            },
            value: {
              type: "string",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "None",
              type: "string",
            },
            value: {
              type: "null",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
      ],
      description: "Description one. An option of specified \`some\` type.",
      discriminator: "type",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`Option 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "Some",
              type: "string",
            },
            value: {
              type: "string",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "None",
              type: "string",
            },
            value: {
              type: "null",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
      ],
      description: "Description two. Description one. An option of specified \`some\` type.",
      discriminator: "type",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
